# dash_mateus

./: .gitignore  CLAUDE.md  EXPLICACAO_LEIGOS.md  GUIA_IMPLEMENTACAO.md  README.md  SETUP_COMPLETO.md  docker-compose.yml  rascunho.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  seed_data.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  categories.py  projections.py  transactions.py  upload.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: ai_chat.py  bank_statement.py  category.py  projection.py  transaction.py  user.py
backend/app/schemas/: ai_chat.py  bank_statement.py  category.py  projection.py  transaction.py  user.py
backend/app/services/: llm_service.py  parser_service.py
backend/tests/: conftest.py  test_auth.py  test_transactions.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/categories/: page.tsx
frontend/src/app/(dashboard)/projections/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/transactions/: page.tsx
frontend/src/app/(dashboard)/upload/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: chat-widget.tsx
