[tool.poetry]
name = "dashboard-backend"
version = "0.1.0"
description = "Backend FastAPI para Dashboard Financeiro Pessoal"
authors = ["Mateus Olinto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.12.4"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
pandas = "^2.2.3"
numpy = "^2.1.3"
ollama = "^0.4.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
